--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,16 +15,10 @@ jobs:
         with:
           path: ${{ steps.brew-cache.outputs.dir }}
           key: ${{ runner.os }}-${{ hashFiles('Brewfile') }}
-      - name: Brew config
-        run: |
-          brew config
-      - name: Uninstall default node
-        run: brew uninstall node@14
       - name: Install
         run: |
-          make
-          make install
-          make setup
+          sh ./install.sh
+          ls -al ~/
       - name: Cleanup
         run: |
           cd ${{ steps.brew-cache.outputs.dir }} && ls -lsS | head -n 10 | awk '{ print $10 }' | xargs rm -rf
