ファイルの取得元を変更

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('Brewfile') }}
       - name: Install
         run: |
-          sh ./install.sh
+          sh -c "$(curl -fsSL dot.hiratake.xyz)"
           ls -al ~/
       - name: Cleanup
         run: |
