--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,9 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('Brewfile') }}
       - name: Install
         run: |
-          sh -c "$(curl -fsSL dot.hiratake.xyz)"
+          bash -c "$(curl -fsSL dot.hiratake.xyz)"
           ls -al ~/
+          bash ~/bin/dotfiles
       - name: Cleanup
         run: |
           cd ${{ steps.brew-cache.outputs.dir }} && ls -lsS | head -n 10 | awk '{ print $10 }' | xargs rm -rf
