--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,11 @@ jobs:
       - name: Install
         run: |
           bash -c "$(curl -fsSL dot.hiratake.xyz)"
-          ls -al ~/
+      - name: command
+        run: |
           bash ~/bin/dotfiles
+          bash ~/bin/dotfiles version
+          bash ~/bin/dotfiles init
       - name: Cleanup
         run: |
           cd ${{ steps.brew-cache.outputs.dir }} && ls -lsS | head -n 10 | awk '{ print $10 }' | xargs rm -rf
