--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -23,6 +23,7 @@ http {
     keepalive_timeout           10;
     client_header_timeout       10;
     client_body_timeout         10;
+    client_max_body_size        100m;
     reset_timedout_connection   on;
     send_timeout                10;
 
