--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Get brew cache directory
-        run: echo "::set-output name=dir::$(brew --cache)/downloads"
+        run: echo "dir=$(brew --cache)/downloads" >> $GITHUB_OUTPUT
         id: brew-cache
       - name: Cache
         uses: actions/cache@v3
