--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,4 +32,4 @@ jobs:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       - name: Install dotfiles
-        run: sh -c "$(curl -fsSL get.chezmoi.io)" -- init --apply -S .
+        run: sh -c "$(curl -fsSL get.chezmoi.io)" -- init --promptString name=Name email=example@example.com --apply -S .
