fix: dockerのメモリサイズの設定を修正

--- a/home/dot_config/lima/docker.yml
+++ b/home/dot_config/lima/docker.yml
@@ -29,7 +29,7 @@ mounts:
   - location: '/tmp/lima'
     writable: true
 
-memory: '8Gib'
+memory: '8GiB'
 
 # containerd is managed by Docker, not by Lima, so the values are set to false here.
 containerd:
