chore: 拡張機能を追加

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,12 +4,14 @@
     "bradlc.vscode-tailwindcss",
     "csstools.postcss",
     "dbaeumer.vscode-eslint",
+    "docker.docker",
     "dotenv.dotenv-vscode",
     "dunstontc.viml",
     "eamodio.gitlens",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
     "laravel.vscode-laravel",
+    "ms-azuretools.vscode-containers",
     "ms-azuretools.vscode-docker",
     "ms-ceintl.vscode-language-pack-ja",
     "ms-vscode-remote.vscode-remote-extensionpack",
