chore: 設定を変更

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,7 +41,21 @@
   "git.autofetch": true,
   "git.confirmSync": false,
   "git.openRepositoryInParentFolders": "never",
+  "gitlens.views.branches.showStashes": true,
   "gitlens.views.repositories.showStashes": true,
+  "gitlens.views.scm.grouped.views": {
+    "commits": true,
+    "branches": true,
+    "remotes": true,
+    "stashes": true,
+    "tags": true,
+    "worktrees": true,
+    "contributors": true,
+    "fileHistory": false,
+    "repositories": true,
+    "searchAndCompare": false,
+    "launchpad": false
+  },
   "javascript.updateImportsOnFileMove.enabled": "never",
   "terminal.integrated.defaultProfile.windows": "Ubuntu (WSL)",
   "terminal.integrated.enablePersistentSessions": false,
