--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     "*.yaml.tmpl": "yaml",
     ".env*": "dotenv",
     "config.tmpl": "ini",
+    "config.toml.tmpl": "toml",
     "dot_bash_aliases.tmpl": "shellscript",
     "dot_bash_profile": "shellscript",
     "dot_bashrc": "shellscript",
